app/assets/stylesheets/application.css.scss
/*
* This is a manifest file that'll be compiled into application.css, which will include all the files
* listed below.
*
* Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
* or vendor/assets/stylesheets of plugins, if any, can be referenced here using a relative path.
*
* You're free to add application-wide styles to this file and they'll appear at the bottom of the
* compiled file so the styles you add here take precedence over styles defined in any styles
* defined in the other CSS/SCSS files in this directory. It is generally better to create a new
* file per style scope.
*
*= require_tree .
*= require dataTables/jquery.dataTables
*= require_self
*/
@import "bootstrap_configuration";

@import "bootstrap";

@import url("//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css");

//->Prelang (ui_framework:twitter_bootstrap)

// Give everything in 'yield' margin to separate it.
.yield {
	margin: 30px;
}

// Constrain forms for models (scaffolded models) so they aren't full page width.
.form-model {
	max-width: 750px;
}

//->Prelang (user_login:devise)
.form-user {
	max-width: 450px;
}

.wordwrap {
	word-wrap: break-word;
}

// Custom css
body {
	font-family: courier;
	font-size: 1.1em;
}

th {
	text-align: center;
}

td {
	text-align: center;
	overflow: hidden;
	text-overflow: ellipsis;
}

table {
	width: 100%;
	table-layout: fixed
}

.modal-body p {
	word-wrap: break-word;
}

